# s3-CI-CD

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  validate.yml
infrastructure/: s3-bucket.tf
mcp_server/: main.py  s3_client.py
prompts/agent/: examples.json  instructions.txt  system.txt
scripts/: download_prompts.py  list_versions.py  rollback.py  upload_prompts.py
tests/: test_prompts.py
